--- a/htdocs/egcs-1.1/index.html
+++ b/htdocs/egcs-1.1/index.html
@@ -159,8 +159,8 @@ EGCS 1.1.1:</p>
     <li> Avoid GNU-make dependencies in the texinfo subdir.
 
     <li> Install CPP wrapper script in $(prefix)/bin if --enable-cpp.
-	 --enable-cpp=<dirname> can be used to specify an additional install
-	 directory for the cpp wrapper script.
+	 --enable-cpp=&lt;dirname&gt; can be used to specify an additional
+         install directory for the cpp wrapper script.
 
     <li> Fix CSE bug which caused incorrect label-label refs to appear on
 	 some platforms.
@@ -262,7 +262,7 @@ group of volunteers</a> is what makes EGCS successful.</p>
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.</p>
 
-<p>Download EGCS from egcs.cygnus.com (USA California)</a>.</p>
+<p>Download EGCS from egcs.cygnus.com (USA California).</p>
 
 <p>The EGCS 1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>.</p>
