Fix broken and "bent" links.

--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -880,8 +880,8 @@ http://www.support.compaq.com/alpha-tools/documentation/current/21264_EV67/ec-rj
 <p><a name="ref_22">[22]</a>
 <em>Compiler-Based Prefetching for Recursive Data Structures</em>,
 Chi-Keung Luk and Todd C. Mowry, linked from
-<a href="http://www.cs.cmu.edu/~tcm/Papers.html">
-http://www.cs.cmu.edu/~tcm/Papers.html</a>.
+<a href="http://www-2.cs.cmu.edu/~tcm/Papers.html">
+http://www-2.cs.cmu.edu/~tcm/Papers.html</a>.
 That location also has links to several other papers about data prefetch
 by Todd C. Mowry.</p>
 
