Add cris and s390 to the list of ports that use define_peephole

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -582,8 +582,8 @@ cleaner and requires less gunk in the implementation.</p>
 
 <p>The targets with text peepholes are:</p>
 <pre>
-  1750a arm avr c4x dsp16xx fr30 i860 i960 m32r m68hc11 m68k
-  mcore mips mn10200 mn10300 ns32k pa romp rs6000 sh sparc.
+  1750a arm avr c4x cris dsp16xx fr30 i860 i960 m32r m68hc11 m68k
+  mcore mips mn10200 mn10300 ns32k pa romp rs6000 s390 sh sparc.
 </pre>
 </li>
 
