Add entry for i686-pc-linux-gnu (C3) (Red Hat 6.2, glibc 2.1.3, kernel 2.2.19) for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Build status for GCC 3.0</h1>
+<h1>Build status for GCC 3.0</h1>
 
 <p>This list summarizes build reports for GCC 3.0.x, with links to the
 archived mail messages that reported the builds.</p>
@@ -394,6 +394,13 @@ Unsuccessful:
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01054.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu (C3)</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01314.html">3.0.3</a></ltd>
 </tr>
 
 <tr>
